# libcsnark

./: CMakeLists.txt  README.md  VC_ZKSNARK.md
src/: CMakeLists.txt  gadget2.cpp  gadget2.hpp  goLayer.cpp  goLayer.h  report
src/keyGen/: keypairGen.cpp
src/test/: test-gadget.cpp  test-vcc.cpp  vcc.cpp
